// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryIcon Test match snapshot CategoryIcon 1`] = `
<Icon
  color="#464E5F"
  name="fastfood"
  size={24}
  style={
    Array [
      Object {},
    ]
  }
/>
`;

exports[`CategoryIcon Test match snapshot CategoryIcon default value 1`] = `
<Icon
  color="#464E5F"
  name="list"
  size={24}
  style={
    Array [
      Object {},
    ]
  }
/>
`;
